[package]
name = "livecam"
description = "A very simple, high performance, edge WebRTC SFU"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
tower-http = { version = "0.5.2", features = ["fs", "auth", "trace", "cors"] }
bytes = "1"
rtp = "0.13" 
tokio-stream = "0.1.15"
serde_json = "1.0.114"
serde = { workspace = true, features = ["serde_derive"] }
anyhow = "1.0"
rand = "0.9.2"
toml = "0.9.2"
chrono = "0.4"
jsonwebtoken = "9.3"
base64 = "0.22.1"
axum = { version = "0.7", features = ["multipart", "tracing"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
argon2 = "0.5.3"
webrtc = { workspace = true }
config = { version = "0.15.13", features = ["toml"] } 
liveion = { path = "../liveion" }
rumqttc = { version = "0.24", optional = true }
net4mqtt = { path = "../libs/net4mqtt", optional = true }

[features]
net4mqtt = ["dep:net4mqtt", "dep:rumqttc"]